Added postgres driver. Also added 'users' endpoint.

--- a/app/nginx/conf/nginx.conf
+++ b/app/nginx/conf/nginx.conf
@@ -17,5 +17,10 @@ http {
 			content_by_lua_file ../lua/main.lua;
 			lua_code_cache off;
 		}
+		location /api/users {
+			default_type application/json;
+			content_by_lua_file ../lua/users.lua;
+			lua_code_cache off;
+		}
     }
 }
