Added get_user() method. Found out how to capture path parameters in nginx variables

--- a/app/nginx/conf/nginx.conf
+++ b/app/nginx/conf/nginx.conf
@@ -22,5 +22,10 @@ http {
 			content_by_lua_file ../lua/users.lua;
 			lua_code_cache off;
 		}
+		location ~ ^/api/users/(?<userid>[a-z@.]+)$ {
+			default_type application/json;
+			content_by_lua_file ../lua/users.lua;
+			lua_code_cache off;		
+		}
     }
 }
