--- a/app/public/bower.json
+++ b/app/public/bower.json
@@ -18,6 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular-google-maps": "~2.2.1"
+    "angular-google-maps": "~2.2.1",
+    "angular-route": "~1.4.7"
   }
 }
