Added session mechanism and login script. Also moved db operations to storage.lua file.

--- a/app/nginx/conf/nginx.conf
+++ b/app/nginx/conf/nginx.conf
@@ -8,6 +8,7 @@ http {
 	init_by_lua_file ../lua/init.lua;
     server {
         listen 8080;
+        encrypted_session_key "abcdefghijklmnopqrstuvwxyz123456";
 		location / {
 			root ../public;
 			include  /usr/local/openresty/nginx/conf/mime.types;
@@ -26,6 +27,10 @@ http {
 			default_type application/json;
 			content_by_lua_file ../lua/users.lua;
 			lua_code_cache off;		
+		}
+		location /login {
+			content_by_lua_file ../lua/login.lua;
+			lua_code_cache off;	
 		}
     }
 }
