Added separate authentication phase with secure.lua.

--- a/app/nginx/conf/nginx.conf
+++ b/app/nginx/conf/nginx.conf
@@ -20,11 +20,13 @@ http {
 		}
 		location /api/users {
 			default_type application/json;
+			access_by_lua_file ../lua/secure.lua;
 			content_by_lua_file ../lua/users.lua;
 			lua_code_cache off;
 		}
 		location ~ ^/api/users/(?<userid>[a-z@.]+)$ {
 			default_type application/json;
+			access_by_lua_file ../lua/secure.lua;
 			content_by_lua_file ../lua/users.lua;
 			lua_code_cache off;		
 		}
