- Improvements in security layer. - Added location endpoint with create and list methods. - Added uuid4 library for generating record ids. - Added tests directory for bash script testing.

--- a/app/nginx/conf/nginx.conf
+++ b/app/nginx/conf/nginx.conf
@@ -4,7 +4,9 @@ events {
     worker_connections 1024;
 }
 http {
-	lua_package_path '../lua/?.lua;;';
+	charset_types application/json;
+	charset utf-8;
+	lua_package_path '../lua/?.lua;../lua/lib/?.lua;;';
 	init_by_lua_file ../lua/init.lua;
     server {
         listen 8080;
@@ -30,9 +32,19 @@ http {
 			content_by_lua_file ../lua/users.lua;
 			lua_code_cache off;		
 		}
+		location ~ ^/api/locations {
+			default_type application/json;
+			# access_by_lua_file ../lua/secure.lua;
+			content_by_lua_file ../lua/locations.lua;
+			lua_code_cache off;	
+		}
 		location /login {
 			content_by_lua_file ../lua/login.lua;
 			lua_code_cache off;	
+		}
+		location /logout {
+			access_by_lua_file ../lua/logout.lua;	
+			lua_code_cache off;						
 		}
     }
 }
