--- a/app/public/bower.json
+++ b/app/public/bower.json
@@ -19,6 +19,7 @@
   ],
   "dependencies": {
     "angular-google-maps": "~2.2.1",
-    "angular-route": "~1.4.7"
+    "angular-route": "~1.4.7",
+    "angular-resource": "~1.4.7"
   }
 }
