Fixed marker dragging issue. Other additions too.

--- a/app/nginx/conf/nginx.conf
+++ b/app/nginx/conf/nginx.conf
@@ -34,7 +34,7 @@ http {
 		}
 		location ~ ^/api/locations {
 			default_type application/json;
-			# access_by_lua_file ../lua/secure.lua;
+			access_by_lua_file ../lua/secure.lua;
 			content_by_lua_file ../lua/locations.lua;
 			lua_code_cache off;	
 		}
