- Added goods endpoint - Created basic dispatch logic for goods

--- a/app/nginx/conf/nginx.conf
+++ b/app/nginx/conf/nginx.conf
@@ -38,6 +38,12 @@ http {
 			content_by_lua_file ../lua/locations.lua;
 			lua_code_cache off;	
 		}
+		location ~ ^/api/goods {
+			default_type application/json;
+			access_by_lua_file ../lua/secure.lua;
+			content_by_lua_file ../lua/goods.lua;
+			lua_code_cache off;	
+		}		
 		location /login {
 			content_by_lua_file ../lua/login.lua;
 			lua_code_cache off;	
